Aggregate e-learning attempts in report details